fix: Correção do erro de listas